tests/generator_cases/rust_slice_return/expected/zigo_calculator.h

// Code generated by zigo. DO NOT EDIT.
#ifndef ZIGO_calculator_H
#define ZIGO_calculator_H

#include <stddef.h>
#include <stdint.h>

// ELF and Mach-O export every non-static symbol of a shared library;
// COFF exports nothing without an explicit annotation, so a DLL built
// without this would load and then resolve none of its entry points.
#ifndef ZIGO_EXPORT
#if defined(_WIN32)
#define ZIGO_EXPORT __declspec(dllexport)
#else
#define ZIGO_EXPORT
#endif
#endif

ZIGO_EXPORT void zg_codes(const int32_t * * out_result_ptr, size_t * out_result_len);
ZIGO_EXPORT int32_t zg_label(const uint8_t * * out_result_ptr, size_t * out_result_len);
ZIGO_EXPORT void zg_name(const uint8_t * * out_result_ptr, size_t * out_result_len);
ZIGO_EXPORT const char *zg_last_error_message(void);
ZIGO_EXPORT const char *zg_caught_panic_message(int32_t code);

#endif // ZIGO_calculator_H