tests/generator_cases/rust_slice_return/expected/src/raw.rs

// Code generated by zigo. DO NOT EDIT.

//! The generated call layer between the public API and the native
//! library. Not part of the supported API.

#![allow(dead_code)]

use core::ffi::c_char;

extern "C" {
    pub fn zg_codes(out_result_ptr: *mut *const i32, out_result_len: *mut usize);
    pub fn zg_label(out_result_ptr: *mut *const u8, out_result_len: *mut usize) -> i32;
    pub fn zg_name(out_result_ptr: *mut *const u8, out_result_len: *mut usize);
    pub fn zg_last_error_message() -> *const c_char;
    pub fn zg_caught_panic_message(code: i32) -> *const c_char;
}

/// The most recent native panic message for this binding.
pub fn last_error_message() -> String {
    unsafe { message_at(zg_last_error_message()) }
}

/// The message of the native panic a status code of -256 or below names.
pub fn panic_message(code: i32) -> String {
    unsafe { message_at(zg_caught_panic_message(code)) }
}

/// Copies a NUL-terminated message the shim owns. A null pointer is an
/// absent message rather than an error: the accessors return one when no
/// panic has been recorded.
///
/// # Safety
///
/// `pointer` must be null or point at a NUL-terminated string that stays
/// valid for the duration of the call.
unsafe fn message_at(pointer: *const c_char) -> String {
    if pointer.is_null() {
        return String::new();
    }
    unsafe { core::ffi::CStr::from_ptr(pointer) }
        .to_string_lossy()
        .into_owned()
}

/// Calls the generated C ABI wrapper for `zg_codes`.
pub fn codes() -> (*const i32, usize) {
    let mut out_result_ptr: *const i32 = core::ptr::null();
    let mut out_result_len: usize = 0;
    unsafe { zg_codes(&mut out_result_ptr, &mut out_result_len) };
    (out_result_ptr, out_result_len)
}

/// Calls the generated C ABI wrapper for `zg_label`.
pub fn label() -> (*const u8, usize, i32) {
    let mut out_result_ptr: *const u8 = core::ptr::null();
    let mut out_result_len: usize = 0;
    let code = unsafe { zg_label(&mut out_result_ptr, &mut out_result_len) };
    (out_result_ptr, out_result_len, code)
}

/// Calls the generated C ABI wrapper for `zg_name`.
pub fn name() -> (*const u8, usize) {
    let mut out_result_ptr: *const u8 = core::ptr::null();
    let mut out_result_len: usize = 0;
    unsafe { zg_name(&mut out_result_ptr, &mut out_result_len) };
    (out_result_ptr, out_result_len)
}
